# tingle

./: .pylintrc  .taplo.toml  CHANGELOG.md  CURRENT_TASK.md  LICENSE  MVP_PLAN.md  PLAN_METRIC_GROUPS.md  QA.md  README.md  mise.toml  mkdocs.yml  pyproject.toml  tingle.toml
.claude/skills/glimpse/: SKILL.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: check.md  cli.md  configuration.md  contributing.md  diff.md  index.md  metrics.md
src/tingle/: __init__.py  __main__.py
src/tingle/gates/: __init__.py
src/tingle/gates/cli/: __init__.py  render.py  typer.py
src/tingle/gates/tui/: __init__.py  app.py
src/tingle/inits/: __init__.py  cli.py  services.py  wiring.py
src/tingle/links/: __init__.py  editor.py  text.py
src/tingle/links/config_file/: __init__.py  toml.py
src/tingle/links/fs/: __init__.py  local.py
src/tingle/links/git/: __init__.py  cli.py
src/tingle/mills/: __init__.py  add.py  check.py  config.py  diff.py  display.py  loc.py  ranges.py  runner.py  services.py
src/tingle/mills/metrics/: __init__.py  assemble.py  config_lists.py  counts.py  regex_count.py  registry.py  symbol_uses.py
src/tingle/pacts/: __init__.py  check.py  config.py  diff.py  editor.py  metrics.py  report.py  services.py
src/tingle/specs/: __init__.py  config.py  display.py  ranges.py
tests/gates/: test_cli.py  test_cli_add_init.py  test_cli_cobertura.py  test_cli_diff.py  test_render_groups.py  test_tui.py
tests/inits/: test_wiring.py
tests/integration/gates/cli/: conftest.py  test_cli.py  test_cli_add_init.py  test_cli_check.py  test_cli_cobertura.py  test_cli_diff.py
tests/integration/gates/tui/: test_tui.py
tests/integration/inits/: test_services.py
tests/integration/links/: test_editor.py
tests/integration/links/config_file/: test_config_file_editing.py  test_config_file_toml.py
tests/integration/links/fs/: test_fs_local.py
tests/integration/links/git/: test_git_cli.py
tests/links/: test_config_file_editing.py  test_config_file_toml.py  test_fs_local.py  test_git_cli.py
tests/mills/: test_add.py  test_config.py  test_diff.py  test_ranges.py  test_runner.py
tests/mills/metrics/: test_config_lists.py  test_config_lists_diff.py  test_counts.py  test_counts_diff.py  test_regex_count.py  test_regex_count_diff.py  test_symbol_uses.py  test_symbol_uses_diff.py
tests/pacts/: test_contracts.py  test_diff_contracts.py
tests/unit/: test_add.py  test_check.py  test_config.py  test_contracts.py  test_diff.py  test_diff_contracts.py  test_display.py  test_metric_config_lists.py  test_metric_config_lists_diff.py  test_metric_counts.py  test_metric_ignore_lines.py  test_metric_over_lines.py  test_metric_regex_count.py  test_metric_regex_count_diff.py  test_metric_symbol_uses.py  test_metric_symbol_uses_diff.py  test_mills_services.py  test_ranges.py  test_registry.py  test_render_display.py  test_render_groups.py  test_runner.py
