[project]
name = "tingle"
version = "0.1.0"
description = "Constant refactoring monitoring tool"
authors = [
    {name = "Radosław Ganczarek",email = "radoslaw@ganczarek.in"}
]
license = {text = "MIT"}
requires-python = "3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
