[project]
name = "tingle"
version = "0.1.0"
description = "Constant refactoring monitoring tool"
authors = [
    {name = "Radosław Ganczarek",email = "radoslaw@ganczarek.in"}
]
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "typer (>=0.16.0,<1.0.0)",
    "rich (>=13.0.0,<15.0.0)",
    "tomlkit (>=0.13.0,<1.0.0)",
]

[project.scripts]
tingle = "tingle.gates.cli.typer:main"

[tool.poetry]
packages = [{ include = "tingle", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
ruff = ">=0.12"
mypy = ">=1.16"
import-linter = ">=2.0"
defusedxml = "^0.7.1"
types-defusedxml = "^0.7.0.20260504"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # conflicts with the ruff formatter and each other; standard exclusions
    "COM812", # trailing commas are the formatter's job
    "D203",   # incompatible with D211 (blank line before class docstring)
    "D213",   # incompatible with D212 (multi-line summary on first line)
]

[tool.ruff.lint.isort]
# TYPE_CHECKING-only imports appear in annotations; on 3.11-3.13 those
# evaluate eagerly unless every module opts into lazy annotations
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",    # pytest is built on assert
    "D1",      # test names are the documentation
    "PLR2004", # literal expected values are the point of assertions
    "INP001",  # test directories are not importable packages
    "S603",    # tests drive the real git executable on purpose
    "S607",    # (and rely on it being on PATH)
]
# per-metric isolation: the runners must catch everything a metric raises
"src/tingle/mills/runner.py" = ["BLE001"]
"src/tingle/mills/diff.py" = ["BLE001"]
# CLI flags are inherently boolean and typer requires this parameter shape;
# a command function has one parameter per CLI option by construction
"src/tingle/gates/cli/typer.py" = ["FBT001", "FBT002", "PLR0913"]
# the adapter's whole job is invoking the git executable
"src/tingle/links/git/cli.py" = ["S603", "S607"]

[tool.mypy]
strict = true
files = ["src", "tests"]
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.importlinter]
root_package = "tingle"

[[tool.importlinter.contracts]]
name = "GLIMPSE layers"
type = "layers"
layers = ["gates", "inits", "mills | links", "specs", "pacts"]
containers = ["tingle"]

[[tool.importlinter.contracts]]
name = "links must not import specs"
type = "forbidden"
source_modules = ["tingle.links"]
forbidden_modules = ["tingle.specs"]

[[tool.importlinter.contracts]]
name = "gates must not import links or specs"
type = "forbidden"
source_modules = ["tingle.gates"]
forbidden_modules = ["tingle.links", "tingle.specs"]
# reaching links/specs through inits (wiring) and mills is the intended path
allow_indirect_imports = true
