[project]
name = "tingle"
version = "0.1.0"
description = "Constant refactoring monitoring tool"
authors = [{ name = "Radosław Ganczarek", email = "radoslaw@ganczarek.in" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<4.0"
keywords = ["metrics", "refactoring", "technical-debt", "code-quality", "linting", "ci"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "typer (>=0.16.0,<1.0.0)",
    "rich (>=13.0.0,<15.0.0)",
    "tomlkit (>=0.13.0,<1.0.0)",
    "textual (>=8.2.8,<9.0.0)",
]

[project.urls]
Homepage = "https://fancysnake.github.io/tingle/"
Documentation = "https://fancysnake.github.io/tingle/"
Repository = "https://github.com/fancysnake/tingle"
Changelog = "https://github.com/fancysnake/tingle/blob/main/CHANGELOG.md"
Issues = "https://github.com/fancysnake/tingle/issues"

[project.scripts]
tingle = "tingle.inits.cli:run"

[tool.poetry]
packages = [{ include = "tingle", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
ruff = ">=0.12"
mypy = ">=1.16"
import-linter = ">=2.0"
lxml = ">=5.0"
lxml-stubs = ">=0.5"
taplo = "^0.9.3"
black = "^26.5.1"
codespell = "^2.4.2"
pylint = "^4.0.6"

# optional: the test/quality CI jobs do not need the docs toolchain.
# `mise run docs:build` and `docs:serve` install it on demand.
[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6"
mkdocs-material = "^9.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
preview = true
skip-magic-trailing-comma = true
target-version = ['py311']

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # conflicts with the ruff formatter and each other; standard exclusions
    "COM812", # trailing commas are the formatter's job
    "D203",   # incompatible with D211 (blank line before class docstring)
    "D213",   # incompatible with D212 (multi-line summary on first line)
]

[tool.ruff.lint.isort]
# TYPE_CHECKING-only imports appear in annotations; on 3.11-3.13 those
# evaluate eagerly unless every module opts into lazy annotations
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",    # pytest is built on assert
    "D1",      # test names are the documentation
    "PLR2004", # literal expected values are the point of assertions
    "INP001",  # test directories are not importable packages
    "S603",    # tests drive the real git executable on purpose
    "S607",    # (and rely on it being on PATH)
]
# per-metric isolation: the runners must catch everything a metric raises
"src/tingle/mills/runner.py" = ["BLE001"]
"src/tingle/mills/diff.py" = ["BLE001"]
# CLI flags are inherently boolean and typer requires this parameter shape;
# a command function has one parameter per CLI option by construction;
# textual is imported lazily so non-interactive commands stay fast
"src/tingle/gates/cli/typer.py" = ["FBT001", "FBT002", "PLR0913", "PLC0415"]
# the adapter's whole job is invoking the git executable
"src/tingle/links/git/cli.py" = ["S603", "S607"]

[tool.mypy]
strict = true
files = ["src", "tests"]
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.importlinter]
root_package = "tingle"

[[tool.importlinter.contracts]]
name = "pacts depends on nothing"
type = "forbidden"
source_modules = ["tingle.pacts"]
forbidden_modules = [
    "tingle.specs",
    "tingle.mills",
    "tingle.links",
    "tingle.gates",
    "tingle.inits",
]

[[tool.importlinter.contracts]]
name = "specs depends only on pacts"
type = "forbidden"
source_modules = ["tingle.specs"]
forbidden_modules = ["tingle.mills", "tingle.links", "tingle.gates", "tingle.inits"]

[[tool.importlinter.contracts]]
name = "specs is imported only by mills"
type = "forbidden"
source_modules = ["tingle.links", "tingle.gates", "tingle.inits"]
forbidden_modules = ["tingle.specs"]
# Gates and inits reach specs indirectly through mills, which is by design;
# what GLIMPSE forbids is importing specs directly.
allow_indirect_imports = true

[[tool.importlinter.contracts]]
name = "mills depends only on pacts and specs"
type = "forbidden"
source_modules = ["tingle.mills"]
forbidden_modules = ["tingle.links", "tingle.gates", "tingle.inits"]

[[tool.importlinter.contracts]]
name = "links does not import gates or inits"
type = "forbidden"
source_modules = ["tingle.links"]
forbidden_modules = ["tingle.gates", "tingle.inits"]

[[tool.importlinter.contracts]]
name = "gates does not import links or inits"
type = "forbidden"
source_modules = ["tingle.gates"]
forbidden_modules = ["tingle.links", "tingle.inits"]
